<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:background="@color/light_brown"
    >

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <RadioButton
        android:id="@+id/radioButtonTea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checked="true"
        android:onClick="onClickChangeDrink"
        android:textColor="@color/white"
        android:text="@string/tea" />

    <RadioButton
        android:id="@+id/radioButtonCoffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:onClick="onClickChangeDrink"
        android:text="@string/coffee" />
</RadioGroup>

    <TextView
        android:id="@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:layout_margin="8dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:text="@string/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/checkboxSugar"/>

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:text="@string/sugar"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:text="@string/lemon"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

    <TextView
        android:id="@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        android:text="@string/choose_drink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxLemon" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:entries="@array/options_of_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        />

    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/button_send_description"
        android:src="@drawable/button"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerCoffee"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClickSendOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    />

    </androidx.constraintlayout.widget.ConstraintLayout>